# Stegcore

./: .baseline-hook-allow  .baseline-hook-config  .gitignore  ARCHITECTURE.md  AUP.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  USAGE.md  codecov.yml  deny.toml  install.ps1  install.sh
.cargo/: config.toml
.claude/agents/: weekly-dependency-audit.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml
.github/actions/install-tauri-linux-deps/: action.yml
.github/workflows/: ci.yml  coverage.yml  dev-build.yml  docker-image.yml  licence-check.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: config.rs  main.rs  output.rs  prompt.rs
crates/cli/src/commands/: analyse.rs  build_info.rs  ciphers.rs  diff.rs  embed.rs  extract.rs  info.rs  mod.rs  score.rs  watermark.rs  wizard.rs
crates/cli/tests/: audit_fixes.rs  cli_gap_coverage.rs  cli_integration.rs  concurrent_and_caps.rs  coverage_fill.rs  crash_injection.rs  lossy_pipeline.rs  watermark_integration.rs  wizard_pty.rs
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  consent.rs  errors.rs  keyfile.rs  lib.rs  steg.rs  utils.rs  verses.rs  watermark.rs
crates/core/src/watermark/: mod.rs  ooxml.rs  pdf.rs
crates/core/tests/: watermark_adversarial.rs
crates/engine/: Cargo.toml
crates/engine/fuzz/: Cargo.toml
crates/engine/fuzz/fuzz_targets/: analyse_bmp.rs  analyse_png.rs  analyse_wav.rs  extract_png.rs
crates/engine/src/: analysis.rs  crypto.rs  errors.rs  forensics.rs  jpeg_dct.rs  keyfile.rs  lib.rs  steg.rs  utils.rs  watermark.rs
crates/engine/tests/: analysis_coverage.rs  forensic_vectors.rs  properties.rs
crates/engine/tests/vectors/: permutation_vectors.json
crates/stegcore-ops/: Cargo.toml
crates/stegcore-ops/src/: audit.rs  benchmark.rs  corpus.rs  detectors.rs  embedders.rs  main.rs  metrics.rs  render.rs  score.rs
crates/stegcore-ops/tests/: cli.rs
docker/: Dockerfile  docker-compose.yml
docs/: cli-reference.md  security-model.md  user-guide.md  vs-alternatives.md
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  wdio.conf.cjs  wdio.conf.ts
frontend/e2e/: monkey-clicker.spec.ts  navigation.spec.ts  smoke.spec.ts  wizard-back-button.spec.ts
frontend/e2e-tauri/: smoke.spec.js
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: AnalysisDetail.tsx  DropZone.tsx  EntropyBar.test.tsx  EntropyBar.tsx  FingerprintBadge.tsx  IconButton.tsx  Installer.tsx  KeyboardShortcuts.tsx  ProcessingScreen.tsx  ScoreCard.tsx  Settings.tsx  SplashDark.tsx  SplashLight.tsx  StepTrack.tsx  SuccessCheck.tsx  ToastContainer.tsx  Toggle.tsx
frontend/src/components/steganalysis/: AudioWaveform.tsx  ChiSquaredChart.tsx  LSBHeatmap.tsx  OscilloscopeTrace.tsx  RSAnalysisChart.tsx  SPAGauge.tsx  SteganalysisReport.tsx  analysisTheme.ts  types.ts  useAnimationFrame.ts
frontend/src/lib/: footerContext.ts  footerNav.test.ts  footerNav.ts  ipc.ts  ipc.watermark.test.ts  passphrase.test.ts  passphrase.ts  passphraseStrength.test.ts  passphraseStrength.ts  sound.ts  theme.ts  toast.ts
frontend/src/lib/stores/: dragStore.ts  embedStore.ts  extractStore.ts  settingsStore.ts
frontend/src/routes/: Analyse.tsx  Embed.tsx  Extract.tsx  Home.tsx  Learn.tsx  Watermark.cipher.test.tsx  Watermark.tsx
frontend/src/test/: setup.ts
scripts/: preflight.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  runtime.rs
src-tauri/tests/: commands.rs
tests/fingerprint/: README.md  harness.py
