[package]
name = "stegcore-cli"
version = "4.0.1"
edition = "2021"
rust-version = "1.77.2"
description = "Stegcore CLI: hide encrypted messages inside images and audio, plus a built-in steganalysis suite."
license = "AGPL-3.0-or-later"
repository = "https://github.com/The-Malware-Files/Stegcore"
homepage = "https://github.com/The-Malware-Files/Stegcore"
authors = ["The Malware Files <ops@themalwarefiles.com>"]
readme = "../../README.md"
keywords = ["steganography", "steganalysis", "encryption", "privacy", "cli"]
categories = ["command-line-utilities", "cryptography", "multimedia::images"]

[[bin]]
name = "stegcore"
path = "src/main.rs"

[dependencies]
stegcore-core = { path = "../core", version = "4.0.1" }

# CLI parsing
clap = { version = "4", features = ["derive", "color", "env"] }
clap_complete = "4"

# Terminal UX
crossterm = "0.28"
indicatif = "0.17"

# File dialogs (wizard/interactive mode)
rfd = "0.15"

# Passphrase input
rpassword = "7"
zeroize = "1"

# Interrupt handling
ctrlc = "3"

# File glob matching (analyze --batch)
glob = "0.3"

# Serialisation (JSON output + serde derives)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Image (for diff command)
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "webp"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Watch mode (directory monitoring)
notify = "7"

# Config file
toml = "0.8"
dirs = "6"

# Benchmark (cipher throughput)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"

[dev-dependencies]
# CLI integration testing — runs the actual built binary against real
# temp-dir fixtures. Closes tech-debt T-09.
assert_cmd = "2"
predicates = "3"
tempfile = "3"
hound = "3"
# Crash-injection tests need SIGKILL on Unix.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
