[package]
name = "stegcore-core"
version = "4.0.2"
edition = "2021"
rust-version = "1.77.2"
description = "Stegcore public wrapper: engine bindings, report types, and the dispatcher both the CLI and the Tauri GUI consume."
license = "AGPL-3.0-or-later"
repository = "https://github.com/The-Malware-Files/Stegcore"
homepage = "https://github.com/The-Malware-Files/Stegcore"
authors = ["The Malware Files <ops@themalwarefiles.com>"]
readme = "../../README.md"
keywords = ["steganography", "steganalysis", "encryption", "privacy"]
categories = ["cryptography", "multimedia::images", "multimedia::audio"]

[lib]
name = "stegcore_core"
crate-type = ["rlib"]

[dependencies]
# Engine (sibling workspace crate)
stegcore-engine = { path = "../engine", version = "4.0.2" }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error types
thiserror = "1"

# Temp files
tempfile = "3"

# Platform config-directory resolution (shared watermarking consent marker)
dirs = "6"

# Document watermark carriers. Minimal feature sets: lopdf with no date/parallel
# extras, zip with a single deflate backend (no bzip2/zstd/aes/lzma codecs).
lopdf = { version = "0.36.0", default-features = false }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

# Logging
log = "0.4"

# Parallelism
rayon = "1"
