[package]
name = "stegcore-engine"
version = "4.0.2"
edition = "2021"
rust-version = "1.77.2"
description = "Stegcore steganography engine: adaptive LSB, JPEG DCT, WAV PCM, deniable dual-payload, Aletheia-parity SPA / RS / WS steganalysis."
license = "AGPL-3.0-or-later"
repository = "https://github.com/The-Malware-Files/Stegcore"
homepage = "https://github.com/The-Malware-Files/Stegcore"
authors = ["The Malware Files <ops@themalwarefiles.com>"]
readme = "../../README.md"
keywords = ["steganography", "steganalysis", "lsb", "cryptography", "aletheia"]
categories = ["cryptography", "multimedia::images", "multimedia::audio", "multimedia::encoding"]

[lib]
name = "stegcore_engine"
crate-type = ["lib"]

[dependencies]
ascon-aead       = "0.4"
chacha20poly1305 = "0.10"
aes-gcm          = "0.10"
argon2           = "0.5"
zstd             = "0.13"
dct-io           = "0.1"
image            = { version = "0.25", features = ["png", "bmp", "jpeg", "webp"] }
# Direct use of the low-level PNG encoder (already in the tree via `image`)
# so we can control compression and preserve ancillary chunks, which
# image's high-level writer does not expose.
png              = "0.17"
hound            = "3.5"
symphonia        = { version = "0.5", features = ["flac"] }
bitvec           = "1"
rand             = "0.8"
rand_chacha      = "0.3"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
base64           = "0.22"
thiserror        = "1"
zeroize          = { version = "1", features = ["derive"] }
tempfile         = "3"
statrs           = "0.17"
rayon            = "1"
bumpalo          = "3"

[dev-dependencies]
# Property-based testing for engine invariants — Track B of the
# adversarial test gate. Pinned cases run in CI; the shrinking + random
# space runs locally.
proptest = "1"
