[package]
name = "stegcore-ops"
version = "4.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Stegcore operations tooling: dataset audit, score collection, and comparative benchmarking."
license = "AGPL-3.0-or-later"
repository = "https://github.com/The-Malware-Files/Stegcore"
homepage = "https://github.com/The-Malware-Files/Stegcore"
authors = ["The Malware Files <ops@themalwarefiles.com>"]

[[bin]]
name = "stegcore-ops"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Decode fetched JPEG covers and re-encode them losslessly to PNG. The network
# fetch itself is delegated to the system `curl` (same shell-out pattern the
# score command uses for the engine) so no HTTP/TLS dependency is pulled in.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Benchmark charts rendered to SVG. The SVG backend writes text as markup, so
# the viewer supplies the font: no embedded font asset, no system-font
# dependency, and a scalable vector artefact for the README and book.
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "all_series", "all_elements"] }
# Stage covers into a bind-mount directory when driving the dockerised
# OpenStego embedder; also used throughout the tests.
tempfile = "3"
